Lesson#3/HW/kkExercise-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: haim77420/flask-app:0.1
        volumeMounts:
          - mountPath: "/data"
            name: my-storage
        ports:
          - containerPort: 5000
      volumes:
        - name: my-storage
          persistentVolumeClaim:
            claimName: flask-pvc
