Lesson#3/HW/kkExercise-statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-headless
  namespace: flask-app
spec:
  clusterIP: None
  selector:
    app: flask-state
  ports:
  - port: 80
    targetPort: 5000
