Lesson#3/HW/kkExercise-ingress-statefulset.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-state-ingress
  namespace: flask-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flask-state.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-headless
            port:
              number: 80
